# orbiter

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
benchmarks/: benchmark.py
deploy/: Caddyfile
docs/: architecture.md  authentication.md  data-model.md  docker-compose.md  execution-semantics.md  failure-scenarios.md  postgres.md  queue-backends.md  roadmap.md  scheduling.md
examples/: example_dag.py
scripts/: entrypoint.sh
src/hoynatski/: __init__.py
src/hoynatski/api/: __init__.py  server.py
src/hoynatski/cli/: __init__.py  main.py
src/hoynatski/core/: dag.py  exceptions.py  state.py  task.py
src/hoynatski/executor/: __init__.py  executor.py  worker.py
src/hoynatski/plugins/: __init__.py
src/hoynatski/queue/: __init__.py
src/hoynatski/retry/: __init__.py
src/hoynatski/scheduler/: __init__.py  scheduler.py
src/hoynatski/storage/: __init__.py  schema.sql  sqlite_store.py
src/orbiter/: __init__.py
src/orbiter/api/: __init__.py  auth.py  server.py
src/orbiter/cli/: __init__.py  main.py
src/orbiter/core/: context.py  dag.py  exceptions.py  task.py  validation.py
src/orbiter/executor/: __init__.py  executor.py  worker.py
src/orbiter/plugins/: __init__.py  registry.py
src/orbiter/queue/: __init__.py  factory.py  queue.py
src/orbiter/retry/: __init__.py  backoff.py
tests/: test_api_server.py  test_auth.py  test_context.py  test_dag.py  test_executor.py  test_fault_injection.py  test_idempotency.py  test_operations.py  test_retry.py  test_schedules.py  test_store_queue.py
(+12 files in other folders)
